--- a/clone/src/mainPage/webBody.css
+++ b/clone/src/mainPage/webBody.css
@@ -4,6 +4,7 @@
 }
 
 #body {
+    width : 100%;
     height: 100%;
     background-color: #E0E3DA;
 }
@@ -23,18 +24,18 @@
     padding: 5px;
 }
 
-#body > #body-center {
+#body-center {
     width: 75%;
-    height: 100%;
+    height: 90%;
     margin: 0 auto;
-    display: flex;
+    flex : 1 1 auto;
     flex-direction: column;
 }
 
 #body-center > #room-list {
-    height: 100%;
+    height: 90%;
     background-color: #FFFFF3;
-    display: flex;
+    flex : 1 1 auto;
     flex-direction: column;
 }
 
@@ -53,15 +54,14 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    height: 10%;
     background-color: #566270;
 }
 
 #footer-center {
     width: 75%;
-    height: 100%;
     margin: 0 auto;
-    display: flex;
-    flex-basis: 80px;
+    flex : 1 1 auto;
 }
 
 
