--- a/clone/src/mainPage/webHeader.css
+++ b/clone/src/mainPage/webHeader.css
@@ -2,13 +2,10 @@ head, body, #root, #root > div {
     height: 100%;
 }
 
-body{
-    background-color: #E0E3DA;
-}
 
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 #header {
     background-color: #566270;
@@ -40,4 +37,3 @@ body{
 #header-area-end > img {
     margin-left: 8px;
 }
-
